--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       />
 
       <label for="base">Base Color</label>
-      <input id="base" type="color" name="base" value="#ffc600" />
+      <input id="base" type="color" name="color" value="#ade45c" />
     </div>
 
     <img src="https://source.unsplash.com/7bwQXzbF6KE/800x500" />
